# examples

./: meson.build
data/: gschema.xml
po/: com.github.yourusername.yourrepositoryname.pot  de.po  es.po
src/: Application.vala
